# pixel-board

./: .gitignore  .gitmodules  Automation_Custom_Script.sh  README.md  dietpi.txt  install.sh  pyproject.toml  run.sh
app/: CMakeLists.txt  board.py  display.cc  preview.py  sun_times.py
app/sun_times/: __init__.py  sun_times.py
install/: dietpi-wifi_partial.txt  dietpi-wifi_secrets.txt.template  dietpi_partial.txt  dietpi_secrets.txt.template  generate_dietpi.txt.sh
