[project]
name = "pixel-board"
version = "0.1.0"
description = "LED matrix display controller"
authors = [
    {name = "Tassilo Selover-Stephan", email = "tassilo@selover-stephan.com"},
]
dependencies = ["pillow>=11.0.0", "requests>=2.32.3"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "RGBMatrixEmulator>=0.11.6",
    "libsixel-python>=0.5.0",
    "pympler>=1.1",
]
