[project]
name = "pixel-board"
version = "0.1.0"
description = "LED matrix display controller"
authors = [
    {name = "Tassilo Selover-Stephan", email = "tassilo@selover-stephan.com"},
]
dependencies = ["pillow>=11.0.0", "requests>=2.32.3"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.uv]
python-preference = "only-system"

[dependency-groups]
dev = [
    "poethepoet>=0.29",
]

[tool.poe.tasks]
preview = {shell = "python app/board.py | python app/preview.py"}
